--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "magento/magento-cloud-docker": "^1.0.0",
     "magento/magento-cloud-patches": "^1.0.0",
     "monolog/monolog": "^1.16",
-    "nesbot/carbon": "^2.25",
+    "nesbot/carbon": "^1.0||^2.0",
     "psr/container": "^1.0",
     "psr/log": "^1.0",
     "symfony/config": "^3.4||^4.3",
