MAGECLOUD-4127: Build fails with empty config.php

--- a/composer.json
+++ b/composer.json
@@ -68,19 +68,19 @@
     }
   },
   "scripts": {
-    "test": [
-      "@phpstan",
-      "@phpcs",
-      "@phpmd",
-      "@phpunit",
-      "@coverage"
+    "test:all": [
+      "@test:phpstan",
+      "@test:phpcs",
+      "@test:phpmd",
+      "@test:phpunit",
+      "@test:coverage"
     ],
-    "phpstan": "phpstan analyse -c tests/static/phpstan.neon",
-    "phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
-    "phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
-    "phpunit": "phpunit --configuration tests/unit",
-    "coverage": "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml",
-    "coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage",
+    "test:phpstan": "phpstan analyse -c tests/static/phpstan.neon",
+    "test:phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
+    "test:phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
+    "test:phpunit": "phpunit --configuration tests/unit",
+    "test:coverage": "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml",
+    "test:coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage",
     "pre-autoload-dump": [
       "Magento\\MagentoCloud\\Composer\\ClearAutoload::preAutoloadDump"
     ]
