--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
     "repo.magento.com": {
       "type": "composer",
       "url": "https://repo.magento.com/"
+    },
+    "docker": {
+      "type": "vcs",
+      "url": "https://github.com/magento/magento-cloud-docker.git"
     }
   },
   "require": {
@@ -21,7 +25,7 @@
     "guzzlehttp/guzzle": "^6.2",
     "illuminate/config": "^5.6",
     "magento/magento-cloud-components": "^1.0.1",
-    "magento/magento-cloud-docker": "^1.0.0",
+    "magento/magento-cloud-docker": "dev-MAGECLOUD-4486 as 1.0.99",
     "magento/magento-cloud-patches": "^1.0.0",
     "monolog/monolog": "^1.16",
     "nesbot/carbon": "^2.25",
