--- a/composer.json
+++ b/composer.json
@@ -72,13 +72,15 @@
       "@test:phpstan",
       "@test:phpcs",
       "@test:phpmd",
-      "@test:phpunit",
+      "@test:unit",
+      "@test:integration",
       "@test:coverage"
     ],
     "test:phpstan": "phpstan analyse -c tests/static/phpstan.neon",
     "test:phpcs": "phpcs src --standard=tests/static/phpcs-ruleset.xml -p -n",
     "test:phpmd": "phpmd src xml tests/static/phpmd-ruleset.xml",
-    "test:phpunit": "phpunit --configuration tests/unit",
+    "test:unit": "phpunit --configuration tests/unit",
+    "test:integration": "phpunit --configuration tests/integration",
     "test:coverage": "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml",
     "test:coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage",
     "pre-autoload-dump": [
@@ -90,12 +92,6 @@
   },
   "prefer-stable": true,
   "extra": {
-    "map": [
-      [
-        "dist/.magento.env.yaml",
-        ".magento.env.yaml.dist"
-      ]
-    ],
     "include_files": [
       "vendor/codeception/phpunit-wrapper/src/phpunit7-interfaces.php"
     ]
