--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -10,6 +10,7 @@ settings:
 extensions:
   enabled:
     - Codeception\Extension\RunFailed
+    - Codeception\Extension\FailedInfo
 params:
   - tests/functional/configuration.dist.yml
 modules:
