--- a/src/Test/Functional/Acceptance.suite.dist.yml
+++ b/src/Test/Functional/Acceptance.suite.dist.yml
@@ -1,6 +1,7 @@
 actor: CliTester
 modules:
   enabled:
+    - Magento\CloudDocker\Test\Functional\Codeception\TestInfrastructure
     - Magento\CloudDocker\Test\Functional\Codeception\Docker
     - Magento\CloudDocker\Test\Functional\Codeception\MagentoDb
     - PhpBrowser
