--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "magento/ece-tools",
   "description": "Provides tools to build and deploy Magento 2 Enterprise Edition",
   "type": "magento2-component",
-  "version": "2002.0.99",
+  "version": "2002.1.0",
   "license": "OSL-3.0",
   "repositories": {
     "repo.magento.com": {
@@ -96,6 +96,12 @@
   },
   "prefer-stable": true,
   "extra": {
+    "map": [
+      [
+        "dist/.magento.env.yaml",
+        ".magento.env.yaml.dist"
+      ]
+    ],
     "include_files": [
       "vendor/codeception/phpunit-wrapper/src/phpunit7-interfaces.php"
     ]
