--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "ext-PDO": "*",
     "ext-json": "*",
     "ext-sockets": "*",
+    "colinmollenhour/credis": "^1.6.0",
     "composer/composer": "^1.4",
     "composer/semver": "^1.4",
     "graylog2/gelf-php": "^1.4.2",
