--- a/codeception.dist.yml
+++ b/codeception.dist.yml
@@ -16,7 +16,9 @@ modules:
   config:
     Magento\CloudDocker\Test\Functional\Codeception\TestInfrastructure:
       template_repo: "https://github.com/magento/magento-cloud.git"
-      ece_docker_repo: "https://github.com/magento/magento-cloud-docker.git"
+      mcd_repo: "https://github.com/magento/magento-cloud-docker.git"
+      mcc_repo: "https://github.com/magento/magento-cloud-components.git"
+      mcp_repo: "https://github.com/magento/magento-cloud-patches.git"
       printOutput: true
     Magento\CloudDocker\Test\Functional\Codeception\Docker:
       db_host: "%Magento.docker.settings.db.host%"
