MAGECLOUD-4486: Docker functional tests and CI with ece-tools test framework

--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,6 @@
     "repo.magento.com": {
       "type": "composer",
       "url": "https://repo.magento.com/"
-    },
-    "docker": {
-      "type": "vcs",
-      "url": "https://github.com/magento/magento-cloud-docker.git"
     }
   },
   "require": {
@@ -25,7 +21,7 @@
     "guzzlehttp/guzzle": "^6.2",
     "illuminate/config": "^5.5",
     "magento/magento-cloud-components": "^1.0.1",
-    "magento/magento-cloud-docker": "dev-MAGECLOUD-4486 as 1.1.0",
+    "magento/magento-cloud-docker": "^1.0.0",
     "magento/magento-cloud-patches": "^1.0.0",
     "monolog/monolog": "^1.16",
     "nesbot/carbon": "^1.0||^2.0",
