MAGECLOUD-4486: Docker functional tests and CI with ece-tools test framework (#656)

--- a/composer.json
+++ b/composer.json
@@ -93,6 +93,12 @@
   },
   "prefer-stable": true,
   "extra": {
+    "map": [
+      [
+        "dist/.magento.env.yaml",
+        ".magento.env.yaml.dist"
+      ]
+    ],
     "include_files": [
       "vendor/codeception/phpunit-wrapper/src/phpunit7-interfaces.php"
     ]
