--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     "guzzlehttp/guzzle": "^6.2",
     "illuminate/config": "^5.5",
     "magento/magento-cloud-components": "^1.0.1",
-    "magento/magento-cloud-docker": "^1.0.0",
     "magento/magento-cloud-patches": "^1.0.0",
     "monolog/monolog": "^1.16",
     "nesbot/carbon": "^1.0||^2.0",
@@ -84,6 +83,7 @@
     "test:integration": "phpunit --configuration tests/integration",
     "test:coverage": "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml",
     "test:coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage",
+    "add-cloud-docker": "composer config repositories.mcd git git@github.com:magento/magento-cloud-docker.git && composer require magento/magento-cloud-docker:dev-develop --no-update",
     "pre-autoload-dump": [
       "Magento\\MagentoCloud\\Composer\\ClearAutoload::preAutoloadDump"
     ]
