--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,18 @@
     "repo.magento.com": {
       "type": "composer",
       "url": "https://repo.magento.com/"
+    },
+    "mcd": {
+      "type": "git",
+      "url": "git@github.com:magento/magento-cloud-docker.git"
+    },
+    "mcc": {
+      "type": "git",
+      "url": "git@github.com:magento/magento-cloud-components.git"
+    },
+    "mcp": {
+      "type": "git",
+      "url": "git@github.com:magento/magento-cloud-patches.git"
     }
   },
   "require": {
@@ -21,8 +33,9 @@
     "graylog2/gelf-php": "^1.4.2",
     "guzzlehttp/guzzle": "^6.2",
     "illuminate/config": "^5.5",
-    "magento/magento-cloud-components": "^1.0.1",
-    "magento/magento-cloud-patches": "^1.0.0",
+    "magento/magento-cloud-components": "^1.0",
+    "magento/magento-cloud-docker": "dev-develop as 1.1.99",
+    "magento/magento-cloud-patches": "1.*",
     "monolog/monolog": "^1.16",
     "nesbot/carbon": "^1.0||^2.0",
     "psr/container": "^1.0",
@@ -83,7 +96,6 @@
     "test:integration": "phpunit --configuration tests/integration",
     "test:coverage": "phpunit --configuration tests/unit --coverage-clover tests/unit/tmp/clover.xml && php tests/unit/code-coverage.php tests/unit/tmp/clover.xml",
     "test:coverage-generate": "phpunit --configuration tests/unit --coverage-html tests/unit/tmp/coverage",
-    "add-cloud-docker": "composer config repositories.mcd git git@github.com:magento/magento-cloud-docker.git && composer require magento/magento-cloud-docker:dev-develop --no-update",
     "pre-autoload-dump": [
       "Magento\\MagentoCloud\\Composer\\ClearAutoload::preAutoloadDump"
     ]
