MCLOUD-5763: [Spike] Add GitHub workflow support

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,5 +11,6 @@ jobs:
           - actions/checkout@v1
           - php-actions/composer@v1
           - php-actions/phpunit@v1
-        config: tests/unit
-        memory: 256M
+        with:
+          config: tests/unit
+          memory: 256M
