--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,9 @@ jobs:
   static-unit:
     name: PHPUnit tests
     runs-on: ubuntu-latest
+    with:
+      php-version: '7.4'
+      extensions: sockets
     env:
       COMPOSER_AUTH: '{"http-basic": {"repo.magento.com": {"username": "021659cd19664f0167a9f727a73f781a","password": "99c7a50a8c29319cafc4574e2ce4f91f"}}}'
     steps:
