--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,16 +5,19 @@ jobs:
   static-unit:
     name: PHPUnit tests
     runs-on: ubuntu-latest
-    with:
-      php-version: '7.4'
-      extensions: sockets
+    strategy:
+      matrix:
+        php-versions: ['7.1', '7.2', '7.3']
     env:
       COMPOSER_AUTH: '{"http-basic": {"repo.magento.com": {"username": "021659cd19664f0167a9f727a73f781a","password": "99c7a50a8c29319cafc4574e2ce4f91f"}}}'
     steps:
       - uses: actions/checkout@v1
+      - uses: shivammathur/setup-php@master
+          with:
+            php-version: ${{ matrix.php-versions }}
+            extensions: sockets
       - uses: php-actions/composer@v1
       - uses: php-actions/phpunit@v1
         with:
           config: tests/unit
           memory: 256M
-
