--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,12 +11,15 @@ jobs:
     env:
       COMPOSER_AUTH: '{"http-basic": {"repo.magento.com": {"username": "021659cd19664f0167a9f727a73f781a","password": "99c7a50a8c29319cafc4574e2ce4f91f"}}}'
     steps:
-      - uses: actions/checkout@v1
-      - uses: shivammathur/setup-php@master
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Prepare PHP
+        uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: sockets
-      - uses: php-actions/composer@v1
+      - name: Composer
+        uses: php-actions/composer@v1
       - uses: php-actions/phpunit@v1
         with:
           config: tests/unit
