MCLOUD-5763: [Spike] Add GitHub workflow support

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,9 +18,5 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: sockets
-      - name: Composer
-        uses: php-actions/composer@v1
-      - uses: php-actions/phpunit@v1
-        with:
-          config: tests/unit
-          memory: 256M
+      - name: Composer Update
+        run: composer update
