--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,15 +1,16 @@
 name: CI
 on: [pull_request]
 
+runs-on: ubuntu-latest
+strategy:
+  matrix:
+    php-versions: ['7.1', '7.2', '7.3']
+env:
+  COMPOSER_AUTH: '{"http-basic": {"repo.magento.com": {"username": "021659cd19664f0167a9f727a73f781a","password": "99c7a50a8c29319cafc4574e2ce4f91f"}}}'
+
 jobs:
   static-unit:
-    name: PHPUnit tests
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php-versions: ['7.1', '7.2', '7.3']
-    env:
-      COMPOSER_AUTH: '{"http-basic": {"repo.magento.com": {"username": "021659cd19664f0167a9f727a73f781a","password": "99c7a50a8c29319cafc4574e2ce4f91f"}}}'
+    name: Static and Unit tests
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -22,5 +23,18 @@ jobs:
         run: composer update
       - name: Static and Unit tests
         run: tests/travis/static-unit.sh
+  integration:
+    name: Integration tests
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Prepare PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-versions }}
+          extensions: sockets
+      - name: Composer Update
+        run: composer update
       - name: Integration tests
         run: tests/travis/integration.sh
+
