--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,16 +24,18 @@ jobs:
       - name: Composer Update
         run: composer update
       - name: Composer credentials
-        run:
-          - composer config http-basic.repo.magento.com ${REPO_USERNAME_CE} ${REPO_PASSWORD_CE}
-          - composer config github-oauth.github.com ${GITHUB_TOKEN}
+        run: |
+          set -e
+          composer config http-basic.repo.magento.com ${REPO_USERNAME_CE} ${REPO_PASSWORD_CE}
+          composer config github-oauth.github.com ${GITHUB_TOKEN}
       - name: Static and Unit tests
-        run:
-          - ./vendor/bin/phpstan analyse -c ./tests/static/phpstan.neon
-          - ./vendor/bin/phpcs ./src --standard=./tests/static/phpcs-ruleset.xml -p -n
-          - ./vendor/bin/phpmd ./src xml ./tests/static/phpmd-ruleset.xml
-          - ./vendor/bin/phpunit --configuration ./tests/unit --coverage-clover ./tests/unit/tmp/clover.xml && php ./tests/unit/code-coverage.php ./tests/unit/tmp/clover.xml
-          - ./vendor/bin/phpunit --configuration ./tests/unit
+        run: |
+          set -e
+          ./vendor/bin/phpstan analyse -c ./tests/static/phpstan.neon
+          ./vendor/bin/phpcs ./src --standard=./tests/static/phpcs-ruleset.xml -p -n
+          ./vendor/bin/phpmd ./src xml ./tests/static/phpmd-ruleset.xml
+          ./vendor/bin/phpunit --configuration ./tests/unit --coverage-clover ./tests/unit/tmp/clover.xml && php ./tests/unit/code-coverage.php ./tests/unit/tmp/clover.xml
+          ./vendor/bin/phpunit --configuration ./tests/unit
       - name: Integration tests
         run: ./vendor/bin/phpunit --configuration ./tests/integration
 
