--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,10 +8,6 @@ jobs:
     strategy:
       matrix:
         php-versions: ['7.1', '7.2', '7.3']
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      REPO_USERNAME_CE: ${{ secrets.REPO_USERNAME_CE }}
-      REPO_PASSWORD_CE: ${{ secrets.REPO_PASSWORD_CE }}
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -22,10 +18,12 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: sockets
-      - name: Composer credentials
+      - name: Remove secure repositories
         run: |
-          composer config http-basic.repo.magento.com ${REPO_USERNAME_CE} ${REPO_PASSWORD_CE}
-          composer config github-oauth.github.com ${GITHUB_TOKEN}
+          composer config --unset repositories.repo.magento.com
+          composer remove --no-update magento/magento-cloud-components
+          composer remove --no-update magento/magento-cloud-docker
+          composer remove --no-update magento/magento-cloud-patches
       - name: Composer Update
         run: composer update
       - name: Static and Unit tests
